cmake_minimum_required(VERSION 3.22)
project(physfs CXX)

set(CMAKE_POLICY_DEFAULT_CMP0077 "NEW")

set(BUILD_SHARED_LIBS OFF)
set(BUILD_STATIC_LIBS ON)

set(PHYSFS_BUILD_STATIC TRUE)
set(PHYSFS_BUILD_SHARED FALSE)
set(PHYSFS_BUILD_TEST FALSE)
set(PHYSFS_BUILD_DOCS FALSE)
set(PHYSFS_DISABLE_INSTALL FALSE)

add_subdirectory(upstream)
